--- a/src/app.css
+++ b/src/app.css
@@ -89,7 +89,7 @@ body[data-theme="light"] .navbar-shadow {
 }
 
 body[data-theme="dark"] .navbar-shadow {
-    box-shadow:  0px 0px 10px 0px var(--dark);
+    box-shadow:  0px 0px 1px 0px var(--card-border);
 }
 
 .component {
